hw12_13_14_15_calendar/calendar/templates/service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar
spec:
  selector:
    app: calendar
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
