hw12_13_14_15_calendar/calendar/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar
spec:
  rules:
    - host: calendar.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar
                port:
                  number: 8090
